# ros_tutorial_with_python

./: README.md
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  example.pc
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
catkin_ws/devel/share/example/cmake/: exampleConfig.cmake
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml  talker_listener.launch
catkin_ws/src/beginner_tutorials/src/: listener.py  talker.py  topic_publisher.py
