<?xml version="1.0"?>
<package>
  <name>beginner_tutorials</name>
  <version>0.0.0</version>
  <description>The Beginner_tutorials with python</description>

  <maintainer email="fcschmidt@gmail.com">fcschmidt</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/</url>

  <author email="fcschmidt@gmail.com">Fábio Schmidt</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
